2001-08-20  Jody Goldberg <jgoldberg@home.com>

	* Release 0.70

2001-08-11  Jody Goldberg <jgoldberg@home.com>

	* Release 0.69

2001-07-17  Jody Goldberg <jgoldberg@home.com>

	* Release 0.68

2001-07-15  Zbigniew Chyla  <cyba@gnome.pl>

	* dif.c (dif_file_open):
	s/gnumeric_io_error_info_push/gnumeric_io_error_push/

	* plugin.xml (<information>):
	s/CSV/DIF

2001-07-01  Morten Welinder  <terra@diku.dk>

	* dif.c: Compilation fix from Adrian Bunk.

2001-06-28  Jody Goldberg <jgoldberg@home>

	* Release 0.67

2001-06-28  Jody Goldberg <jgoldberg@home.com>

	* dif.c (dif_file_save) : we don't handle spans or merges.

2001-06-27  Jody Goldberg <jgoldberg@home.com>

	* Release 0.66

2001-06-12  Zbigniew Chyla  <cyba@gnome.pl>

	* dif.c (dif_input_context_new): Adjusted to memory_io_progress_set
	signature change.

2001-06-04  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml (<service>): Set save_scope to "sheet".

2001-06-03  Jody Goldberg <jgoldberg@home.com>

	* Makefile.am (INCLUDES) : add top_builddir so that we can gt
	  portability.h

2001-06-01  Zbigniew Chyla  <cyba@gnome.pl>

	* dif.c (dif_input_context_new, dif_input_context_destroy, dif_get_line,
	dif_eat_line): Report reading progress via io_context.

2001-05-31  Karl Eichwalder  <ke@suse.de>

	* dif.c (dif_file_save): Normalize message string.

2001-05-31  Zbigniew Chyla  <cyba@gnome.pl>

	* dif.c
	(dif_input_context_new): Allocate "empty" line by default.
	(dif_get_line): Fixed typo.

2001-05-29  Zbigniew Chyla  <cyba@gnome.pl>

	* dif.c
	New line parsing routine - doesn't allocate/deallocate memory at every
	input line, stops processing at the end of mmaped file (instead of
	crashing).
	Write empty cells too (previous behaviour was incorrect).
	Write the current sheet instead of the first one (for XL compatibility).
	Detailed error reporting, fixed leaks, general cleanup.

	* dif.h: Removed.

	* Makefile.am (dif_la_SOURCES): Removed dif.h
